--- a/Machine_Rental.css
+++ b/Machine_Rental.css
@@ -1,15 +1,15 @@
 /* CSS File: styles.css */
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffcccb;
-    color: #333;
+    background-color:white;
+    color: white    ;
     text-align: center;
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #FF6699;
+    background-color: #333;
     padding: 15px;
     color: white;
     font-size: 24px;
@@ -24,7 +24,7 @@ header {
 }
 
 .machine {
-    background: white;
+    background: #333;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -43,4 +43,5 @@ header {
     margin-top: 20px;
     font-size: 1.5em;
     font-weight: bold;
+    color : #333;
 }
