--- a/Machine_Rental.css
+++ b/Machine_Rental.css
@@ -1,15 +1,15 @@
 /* CSS File: styles.css */
 body {
     font-family: Arial, sans-serif;
-    background-color:white;
-    color: white    ;
+    background-color: #fdf6ec;
+    color: #4a6c36;
     text-align: center;
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #333;
+    background-color: #4a6c36;
     padding: 15px;
     color: white;
     font-size: 24px;
@@ -24,7 +24,7 @@ header {
 }
 
 .machine {
-    background: #333;
+    background: #fdf6ec;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -43,5 +43,5 @@ header {
     margin-top: 20px;
     font-size: 1.5em;
     font-weight: bold;
-    color : #333;
+    color: #4a6c36;
 }
