--- a/krushi_yojna.css
+++ b/krushi_yojna.css
@@ -7,8 +7,11 @@ body {
     color: white;
     background-color: #fdf6ec;
 }
-
+.boxes{
+    background-color: #6a994e;
+}
 .container {
+    
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
